# verden.github.io

./: .gitignore  404.html  index.html  mkdocs.yml  sitemap.xml
docs/: index.md
docs/chapter/: 1.md
docs/rcore/: 1.md
docs/信息检索/: 1.md  2.md  3.md  4.md  5.md  6.md  7.md  8.md  9.md
docs/模式识别/: 1.md  10.md  2.md  3.md  4.md  5.md  6.md  7.md  8.md  9.md
docs/矩阵分析与应用/: 1.md  2.md  3.md  4.md  5.md  6.md  7.md  8.md
docs/矩阵分析与应用/work2/: .gitignore  1.md  CMakeLists.txt
docs/矩阵分析与应用/work2/include/: QRReduction.h
docs/矩阵分析与应用/work2/src/: matrix.cc
docs/算法/: 1.md  2.md  3.md  4.md
rcore/1/: index.html
search/: search_index.json
信息检索/1/: index.html
信息检索/2/: index.html
信息检索/3/: index.html
信息检索/4/: index.html
信息检索/5/: index.html
信息检索/6/: index.html
信息检索/7/: index.html
信息检索/8/: index.html
信息检索/9/: index.html
信息检索/work/: 1.cc
模式识别/1/: index.html
模式识别/10/: index.html
模式识别/2/: index.html
模式识别/3/: index.html
模式识别/4/: index.html
模式识别/5/: index.html
模式识别/6/: index.html
模式识别/7/: index.html
模式识别/8/: index.html
模式识别/9/: index.html
模式识别/code_3/: 1.in  1.py
模式识别/work/: 1.cc  1.in  1.py  2.py
模式识别/work4/: 1.cc  1.py  2.cc
模式识别/work5/: a.m  b.m
模式识别/work6/: a.m  data1.mat
矩阵分析与应用/: 1.cc
矩阵分析与应用/1/: index.html
矩阵分析与应用/2/: index.html
矩阵分析与应用/3/: index.html
矩阵分析与应用/4/: index.html
矩阵分析与应用/5/: index.html
矩阵分析与应用/6/: index.html
矩阵分析与应用/7/: index.html
矩阵分析与应用/8/: index.html
算法/1/: index.html
算法/2/: index.html
算法/3/: index.html
算法/4/: index.html
算法/work1/: 1.cc  3.cc  4.cc  5.cc
算法/work2/: 1.cc  3.cc  (+1 more)
(+48 files in other folders)
